# mlops_capstone

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  capstone.code-workspace  component_diagram.drawio  docker-compose.yml  extract_json_from_pdf.ipynb  pyproject.toml  rebuild-docker-compose.sh  ruff.toml
.github/workflows/: codeql.yml  docker-deploy.yml  docker-publish.yml  test-child-apps.yml
app/: Dockerfile  README.md  extract.py  pyproject.toml  requirements.txt
app/app/: __init__.py  __main__.py  data_model.py  extract.py  inference.py  main.py  train.py  utils.py
app/tests/: test_extraction.py  test_rand_data_model_classes.py
app_db/: postgresql.conf
app_db/init_scripts/: 00_00_meta.py  00_01_init.sh  01_01_create_databases.sql  01_02_create_schemata.sql
app_db/tests/: test_database_loads_data.py
database/: Dockerfile  postgres-prod.conf  postgres-test.conf
database/init_scripts/: 00_01_init.sh  01_01_create_databases.sql  01_02_create_schemata.sql  02_01_landing_create_tables.sql
frontend/: Dockerfile  Home.py  __init__.py  constants.py  pyproject.toml  requirements.txt  utils.py
frontend/frontend/: constants.py
frontend/pages/: IngestPDF.py  Monitoring.py  RoboMaintenance.py
frontend/tests/: test_init.py
mlflow/: Dockerfile
mlflow_db/: Dockerfile  postgresql.conf
mlflow_db/init_scripts/: 00_01_init.sh
notebooks/: extract_json_from_pdf.ipynb
scripts/: mk-dotenv.py  poetry-lock-packages.sh
store/templates/: ca_app_template.json
tests/: test_extraction.py
