[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["Alex Beckwith <57322567+witzbeck@users.noreply.github.com>"]
packages = [
    { include = "app", from = "." },
    { include = "frontend", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"
frontend = {path = "frontend"}
app = {path = "app"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "intel-pytorch-extension"
url = "https://pytorch-extension.intel.com/release-whl/stable/cpu/us/"
priority = "explicit"

