[tool.poetry]
name = "capstone"
version = "0.2.0"
description = ""
authors = ["Alex Beckwith <57322567+witzbeck@users.noreply.github.com>"]
packages = [
    { include = "app", from = "./app" },
    { include = "frontend", from = "./frontend" },
]

[tool.poetry.dependencies]
python = "^3.9"
app = { path = "./app", develop = true }
frontend = { path = "./frontend", develop = true }
faker = "^25.1.0"
reportlab = "^4.2.0"
joblib = "^1.4.2"
scikit-learn = "^1.4.2"
mlflow = "^2.12.2"
pytest = "^8.2.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-xdist = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "intel-pytorch-extension"
url = "https://pytorch-extension.intel.com/release-whl/stable/cpu/us/"
priority = "explicit"

[tool.pytest.ini_options]
testpaths = ["tests", "app/tests", "frontend/tests"]
addopts = "--cov=app --cov=frontend -n auto"
filterwarnings = ["ignore::UserWarning"]
required_plugins = [
    "pytest-cov>=1.34.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=2.4.0",
]


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
]
extend-include = ["*.ipynb"]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = ["B"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = ["E4", "E7", "E9", "F", "B", "Q"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app", "frontend", "mlops_capstone"]
known-local-folder = [
    "app",
    "frontend",
    "database",
    "mlops_capstone",
    "tests",
    "store",
]

# Ignore `E402` (import violations) in all `__init__.py` files, and in select subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
