[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Alex Beckwith <57322567+witzbeck@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "*"
gunicorn = "^22.0"
fastapi = "*"
daal4py = "*"
xgboost = "*"
scikit-learn-intelex = "*"
mlflow = "*"
pydantic = "^2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


