[tool.poetry]
name = "app"
version = "0.2.0"
description = ""
authors = ["Alex Beckwith <57322567+witzbeck@users.noreply.github.com>"]
packages = [{ include = "app", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
pytesseract = "^0.3.10"
pdf2image = "^1.17.0"
pdfplumber = "^0.11.0"
faker = "^25.2.0"
pandas = "^2.2.2"
fastapi = "^0.111.0"
gunicorn = "*"
mlflow = "^2.13.2"
pydantic = "^2.7.1"
uvicorn = "^0.29.0"
sqlalchemy = "^2"
reportlab = "^4.2.0"
psycopg = { extras = ["binary"], version = "^3.1.19" }

[tool.poetry.group.test.dependencies]
coverage = "^7.5.2"
pytest = "^8.2.1"
pytest-cov = "5.0.0"
pytest-mock = "3.14.0"
pytest-xdist = "3.6.1"

[tool.pytest.ini_options]
minversion = "8.2.1"
addopts = ["--cov=app", "--cov-report=xml", "-n", "auto"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
