[tool.poetry]
name = "frontend"
version = "0.2.0"
description = "the frontend application of the project"
authors = ["Alex Beckwith <57322567+witzbeck@users.noreply.github.com>"]
packages = [
    { include = "frontend", from = "." },
    { include = "pages", from = "." },
    { include = "tests", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
streamlit = "^1.35.0"
Pillow = "^10.3.0"
matplotlib = "^3.9.0"
requests = "^2.32.2"

[tool.poetry.group.test.dependencies]
coverage = "^7.5.2"
pytest = "^8.2.1"
pytest-cov = "5.0.0"
pytest-mock = "3.14.0"
pytest-xdist = "3.6.1"

[tool.pytest.ini_options]
minversion = "8.2.1"
addopts = ["--cov=frontend", "--cov-report=xml", "-n", "auto"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
